--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "node": "12.14.1",
   "scripts": {
     "start": "node src/app.js"
   },
