--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "express": "^4.17.1",
     "hbs": "^4.1.0",
     "request": "^2.88.2"
-  }
+  },
+  "engines": {
+    "node": "v12.14.1",
+    "npm": "6.13.4"
+},
 }
