--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "4.7.3",
     "hbs": "^4.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "path": "0.12.7"
   },
   "engines": {
     "node": "v12.14.1",
